centered the new equals and clear buttons div

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     border-radius: 30px;
 }
 
-#display, #operators, #numbers{
+#display, #operators, #numbers, #equalsClear{
 align-self: center;}
 
 button{
