--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body{
 
 #display, #operators, #numbers, #equalsClear{
 align-self: center;
-display: flex;}
+display: flex;
+gap: 5px;}
 
 button{
     padding: 20px;
